# Advent-of-code-2022

./: .gitignore  README.md
day1/: .gitignore  challenge.md  day1.cabal  readme.md
day1/app/: Main.hs
day1/src/: MyLib.hs
day10/: day10.cabal
day10/app/: Main.hs
day10/src/: MyLib.hs
day11/: LICENSE  challenge  day11.cabal
day11/src/: MyLib.hs
day12/: challenge  day12.cabal
day12/src/: MyLib.hs
day13/: challenge  day13.cabal
day13/src/: MyLib.hs  book.ipynb
day14/: day10.cabal  day14.ipynb
day14/src/: MyLib.hs
day15/: BeaconExclusionZone.ipynb  requirements.txt
day16/: day16.cabal  day16.py
day16/app/: Main.hs
day16/src/: MyLib.hs
day17/: playground.ipynb
day18/: challenge  day18.ipynb
day19/: challenge  playground.ipynb
day2/: day2.cabal
day2/app/: Main.hs
day2/src/: MyLib.hs
day20/: snd_try.ipynb
day21/: challenge  playground.ipynb
day22/: challenge  playground.ipynb
day23/: challenge  playground.ipynb
day24/: challenge  playground.ipynb
day25/: challenge  playground.ipynb
day3/: day3.cabal
day3/app/: Main.hs
day3/src/: MyLib.hs
day4/: challenge.md  day4.cabal
day4/app/: Main.hs
day4/src/: MyLib.hs
day5/: day5.cabal
day5/app/: Main.hs
day5/src/: DataStructures.hs  MyLib.hs  Parsers.hs
day6/: day6.cabal
day6/app/: Main.hs
day6/src/: MyLib.hs
day7/: challenge  day7.cabal
day7/src/: DataTypes.hs  MyLib.hs  Parsers.hs
day8/: day8.cabal
day8/app/: Main.hs
day8/src/: MyLib.hs
day9/: day9.cabal
day9/app/: Main.hs
day9/src/: MyLib.hs
